# semester-project

./: README.md
Notebooks/: 01-parse-cactus-cmes.ipynb  02-explore-solar-data.ipynb  03-visualize-parameters-vs-cmes.ipynb  04-train-cme-classifier.ipynb  05-evaluate-model.ipynb  06-generate-cme-data.ipynb  normtransform.ipynb
Scripts/: evaluate_model_performance.py  load_plot_blk_data.py  load_plot_cactus_data.py  main_arka_pipeline.py  plot_parameters_vs_cmes.py  train_cme_classifier.py  visualize_model_outputs.py
Scripts/workspace/cme-detection/: README.md  environment.yml  pyproject.toml  requirements.txt
Scripts/workspace/cme-detection/notebooks/: 01-parse-cactus-cmes.ipynb
Scripts/workspace/cme-detection/scripts/: load_plot_cactus_data.py
Scripts/workspace/cme-detection/tests/: test_load_plot_cactus_data.py
